--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "echarts": "^5.4.3",
     "pinia": "^2.1.6",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
